ORION - nromalisation factor theory

--- a/text/abbreviations.tex
+++ b/text/abbreviations.tex
@@ -114,6 +114,8 @@
 \item[OHREX] ORION High Resolution X-ray
 \item[PIC] Particle-In-Cell
 \item[QED] Quantum Electro-Dynamics
+\item[ROM] Relativistic Oscillating Mirror
+\item[RPM] Relativistic Plasma Mirror
 \item[RR] Radiation Reaction
 \item[SF-QED] Strong-Field Quantum Electro-Dynamics
 \item[ZVP] Zero Vector Potential
@@ -134,6 +136,8 @@
 	\acro{OHREX}{ORION High Resolution X-ray}
 	\acro{PIC}{Particle-In-Cell}
 	\acro{QED}{Quantum Electro-Dynamics}
+	\acro{ROM}{Relativistic Oscillating Mirror}
+	\acro{RPM}{Relativistic Plasma Mirror}
 	\acro{RR}{Radiation Reaction}
 	\acro{SF-QED}{Strong-Field Quantum Electro-Dynamics}
 	\acro{ZVP}{Zero Vector Potential}
