--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -204,8 +204,8 @@
 % Add or remove any chapters you'd like here, by file name (excluding '.tex'):
 \flushbottom
 \include{text/ch1-intro}
-\include{text/ch2-zvp}
-%\include{text/ch3-orion}
+%\include{text/ch2-zvp}
+\include{text/ch3-orion}
 %\include{text/chx-misc}
 
 
@@ -214,10 +214,13 @@
 %    page that just says "Appendices" to signal the end of your main text.
 \startappendices
 % Add or remove any appendices you'd like here:
-\include{text/appendix-1}
-\include{text/appendix-2}
+%\include{text/appendix-1}
+%\include{text/appendix-2}
 
 %%%%% REFERENCES
+
+% If references not doing dates properly, clear cache as said here: https://github.com/plk/biber/issues/368
+% rm -rf $(biber --cache)
 
 % JEM: Quote for the top of references (just like a chapter quote if you're using them).  Comment to skip.
 %\begin{savequote}[8cm]
