--- a/text/ch3-orion.tex
+++ b/text/ch3-orion.tex
@@ -11,15 +11,71 @@ HYADES scale length sims, ORION parameters and description of the setup, targets
 
 I think the appropriate order would be theory, simulation, experiment layout, data analysis since then I can use all things inferred from theory and simulation to justify the data analysis. It also means ending well.
 
+The early developments in the field are outlined by Teubner \textit{et al} \cite{teubnerHighorderHarmonicsLaserirradiated2009}.
+
+%`The first experimental observations of femtosecond high-order harmonics were made independently by Kohlweyer et al. 􏰀1995􏰁 and von der Linde et al. 􏰀1995􏰁'
+
+HHG from solids has demonstrated significantly higher conversion efficiencies than for HHG from gases nor are there any limitations to the applied laser intensity \cite{teubnerHighorderHarmonicsLaserirradiated2009}. SHHG has thus been a field of huge interest over the past three decades for the production of bright coherent attosecond harmonics.
 
 \section{\label{ch:3-sec:theory}Theory}
 
-\subsubsection{Hole boring}
+
+
+
+\subsection{The ROM model}
+% TODO Bourdier methodology in introduction
+
+Apply Bourdier method and conservation of generalised momentum, we see that 
+
+and thus non-linearity
+
+and thus the thing we need to solve is blah.
+
+
+The laser pulse leads to macroscopic oscillation of the plasma surface and therefore a corresponding oscillation of the ARP. One can understand this leading to a sub cycle Doppler shift in the reflected pulse. These pulses of radiation separated by the laser pulse frequency must therfore in the spectral domain consist of HH.
+
+The \ac{ROM} model describes an extension. 
+
+The following outlines the key ideas 
+
+Ok: assume I have the expression from Baeva's paper (do this tomorrow)
+
+\subsection{The normalisation factor}
+Baeva's theory provides us with the relative intensity of harmonics. However, for comparison with the absolute spectral intensity of harmonics in experiment, the normalisation factor is required. This can be calculated from conservation of energy. For arbitrary harmonic order scaling, $n^{-p}$, the spectral intensity of the harmonic beam is
+\begin{equation}
+	I_\omega(\omega) = \frac{dE_\omega(J)}{dAd\omega} = I_0 \sum^{n_\mathrm{C}}_{n = 1,\ \mathrm{odd}} n^{-p} S_n\left( \frac{\omega}{\omega_\mathrm{L}}-n\right)
+\end{equation}
+up to the cutoff, $n_\mathrm{C}$. Here $S_n(\omega/\omega_\mathrm{L}-n)$ is the spectral shape function of the $n^\mathrm{th}$ harmonic in reciprocal space and $I_0$ is the normalisation factor of interest. From conservation of energy,
+\begin{equation}
+	\int I_\omega(\omega) \mathrm{d}\omega \mathrm{d} A = ER,
+\end{equation}
+% TODO Simulation showing long pulse vs short pulse spectral shape functions relative sizes
+where $E$ the total energy of the laser pulse and $R$ is the reflectivity of the \ac{RPM}. Intuition suggests the spectral shape function for the $n^\mathrm{th}$ harmonic retains the spectral shape of the incident laser pulse, \textit{i.e.} for a laser pulse with a Gaussian temporal profile, this corresponds to a Gaussian centred at $n\omega_\mathrm{L}$ of width $\sigma_\mathrm{L} = 1/t_\mathrm{L}$, where $t_\mathrm{L}$ is the laser pulse width. Simulations show this is a reasonable approximation.
+
+Simulations also show that for the SP1 laser, the incident laser pulse significantly suppresses the even harmonics, hence,
+\begin{equation}
+	ER = \int^\infty_0 I_0 \sum^{n_\mathrm{C}}_{n=1,\ \mathrm{odd}}n^{-p}e^{-(\omega/\omega_\mathrm{L} - n)^2/\sigma^2_\mathrm{L}}\mathrm{d}\omega.
+\end{equation}
+The integral and summation order can be reversed. Since $\sigma_\mathrm{L} \ll \omega_\mathrm{L}$, all integrals in the summation are $\approx \int^\infty_{-\infty}$ and therefore,
+\begin{equation}
+	ER \approx I_0 \sum^{n_\mathrm{C}/2-1}_{m=0} (1+2m)^{-p} \sqrt{\pi}\sigma_\mathrm{L}\omega_\mathrm{L},
+\end{equation}
+thus,
+\begin{equation}
+	ER \approx I_0 \sqrt{\pi}\sigma_\mathrm{L} ((1-2^{-p})\zeta(p) - 2^{-p}\zeta(p,\frac{n_\mathrm{C} + 1}{2})),
+\end{equation}
+where $\zeta(p)$ and $\zeta(p,(n_\mathrm{C} + 1)/2)$ are the Riemann Zeta and Hurwitz Zeta functions respectively. The final term can be neglected for a petawatt class laser pulse where $n_\mathrm{C} \gg 1$. In the case of an ideal $p$-polarised laser pulse,
+\begin{equation}
+	ER \approx I_0 \sqrt{\pi}\sigma_\mathrm{L} \zeta(p).
+\end{equation}
+For the \ac{ROM} regime, $p = 8/3$ and the \ac{RPM} is extremely efficient, $R \approx 1$. Thus, $I_0$ can be estimated from the system parameters.
+
+\subsection{Hole boring}
 % TODO add reference to ZVP plots demonstrating hole boring.
 As observed in the ZVP plots, on long timescales relative to the laser pulse cycles, via the ponderomotive pressure of the laser, the plasma front moves inwards. This is hole boring \cite{wilksAbsorptionUltraIntenseLaser1992}. One can derive a hole boring velocity by considering conservation of momentum in this quasi-static state. Since the hole boring velocity is laser pulse intensity dependent, the spatial profile of the laser will be imprinted on the surface. Typically Gaussian in shape, for high power laser systems, this can to first order generate a focusing \ac{RPM} and a beaming of the specularly reflected signal, as in Figure \ref{fig:orionholeboring}.
 \begin{figure}
 	\centering
-	\includegraphics[width=0.7\linewidth]{figures/orion/orion_hole_boring}
+	\includegraphics[width=0.9\linewidth]{figures/orion/orion_hole_boring}
 	\caption[2D PIC simulation of HHG beaming effect via hole boring.]{Electromagnetic field intensity in a 2D PIC simulation of a relativistic ($a_0 = 30$) laser pulse incident on a solid density plasma. The incoming beam is specularly reflected off the target which is curved by the radiation pressure leading to beaming in the reflected harmonic beam.}
 	\label{fig:orionholeboring}
 \end{figure}
@@ -31,7 +87,7 @@ Applying momentum balance between the laser pulse and particles in the rest fram
 	\frac{v_\mathrm{HB}}{c} = \sqrt{\frac{R\cos\theta}{2}\frac{Zm_\mathrm{e}}{Am_\mathrm{p}}\frac{n_\mathrm{c}}{n_\mathrm{e}(x_\mathrm{i}(t,y))}}a_L(t,y) = \Pi a_L(t,y),
 \end{equation}
 where $R$ is the RPM reflectivity, $\theta$ is the angle of incidence, \qty{16}{\degree} in the ORION experiment, $Z$ and $A$ are the atomic and atomic mass numbers respectively for the plasma ions, $n_\mathrm{c}$ is the plasma critical density, $n_\mathrm{e}(x_\mathrm{i}(t,y))$ the electron number density and $x_\mathrm{i}(t,y)$
-the depth of hole boring, from the Supplementary Material \cite{vincentiOpticalPropertiesRelativistic2014}. For the ORION laser pulse parameter space $\Pi \ll a_\mathrm{L}$, hence the relativistic correction derived by Robinson \textit{et al} \cite{robinsonRelativisticallyCorrectHoleboring2009} to Equation \ref{eq:v_HB} can be neglected. Due to the high contrast and long duration of the ORION beamlines, there is effectively no pre-plasma formation on the front surface and therefore the number density is simply the number density of the material in solid form and $n_\mathrm{e}$ is independent of $x_\mathrm{i}(t,y)$. Robinson \textit{et al} \cite{robinsonHoleboringRadiationPressure2009} calculated a generalisation of momentum conservation to multiple species, simply replace the mass density with the composite mass density $\rho = \sum_j m_{\mathrm{i}j}n_{\mathrm{i}j}$, then
+the depth of hole boring, from the Supplementary Material \cite{vincentiOpticalPropertiesRelativistic2014}. For the ORION laser pulse parameter space $\Pi \ll a_\mathrm{L}\forall t$ , \textit{i.e.} we are in the relativistic electron and non-relativistic ion regime. Hence, the relativistic correction derived by Robinson \textit{et al} \cite{robinsonRelativisticallyCorrectHoleboring2009} to Equation \ref{eq:v_HB} can be neglected. Due to the high contrast and long duration of the ORION beamlines, there is minimal pre-plasma formation on the front surface and therefore the number density is simply the number density of the material in solid form and $n_\mathrm{e}$ is independent of $x_\mathrm{i}(t,y)$. Robinson \textit{et al} \cite{robinsonHoleboringRadiationPressure2009} generalised momentum conservation to multiple species, simply replace the mass density with the composite mass density $\rho = \sum_j m_{\mathrm{i}j}n_{\mathrm{i}j}$, then
 \begin{equation}
 	\frac{An_\mathrm{e}}{Z} \to \sum_j \frac{A_jn_{\mathrm{e}j}}{Z_j},
 \end{equation}
@@ -55,7 +111,7 @@ At the peak of the main pulse,
 \begin{equation}
 	x_\mathrm{i}(y) = \Pi a_0ce^{-\frac{y^2}{2w_L^2}} G,
 \end{equation}
-where $G = \int_\infty^{t_0} g(t-t_0) \mathrm{d} t \sim t_\mathrm{p}$ and $t_\mathrm{p}$ is the pulse duration.
+where $G = \int_\infty^{t_0} g(t-t_0) \mathrm{d} t \sim t_\mathrm{L}$ and $t_\mathrm{L}$ is the laser pulse temporal width.
 
 The total denting is a combination of the peak electron-ion charge separation, $x_\mathrm{e}$ (which leads to the intrinsic phase imprint on the HHG beam) and equation \ref{eq:xi_t}. Note that for the long pulse duration of the ORION laser, $x_\mathrm{i} \gg x_\mathrm{e}$ and therefore $x_\mathrm{e}$ can be neglected.
 
@@ -65,7 +121,7 @@ Applying a Taylor expansion to the spatial profile of equation \ref{eq:xi_t} aro
 \end{equation}
 where, to first order, this is the equation of a parabolic mirror with focal length
 \begin{equation}
-	f_\mathrm{p}(t) = \frac{w_\mathrm{L}^2}{4\Pi\int^t_{-\infty} a_0\exp({-t^2/2t^2_\mathrm{p}})c\mathrm{d}t}.
+	f_\mathrm{p}(t) = \frac{w_\mathrm{L}^2}{4\Pi a_0cG}.
 \end{equation}
 
 Following the Vincenti \textit{et al} derivation \cite{vincentiOpticalPropertiesRelativistic2014}, the denting parameter is defined as,
@@ -74,7 +130,7 @@ Following the Vincenti \textit{et al} derivation \cite{vincentiOpticalProperties
 \end{equation}
 Hence,
 \begin{equation}
-	\delta_\mathrm{T} = \frac{w_\mathrm{L}^2}{2f_\mathrm{p}} = 2\Pi \int^t_{-\infty} a_0 e^{-t^2/2t^2_\mathrm{p}}c\mathrm{d}t,
+	\delta_\mathrm{T} = \frac{w_\mathrm{L}^2}{2f_\mathrm{p}} = 2\Pi a_0 c G,
 \end{equation}
 and is independent of laser focal spot size. 
 
@@ -91,6 +147,7 @@ is therefore
 	\theta_n = \theta^0_n\sqrt{1+\Psi^2_n},
 \end{equation}
 where $\theta^0_n = \lambda_n/\pi w_n$ is the harmonic divergence in the absence of RPM denting and
+% TODO I think I need to give a bit more of this derivation.
 \begin{equation}
 	\Psi_n = \frac{2\pi}{\cos\theta}\left(\frac{w_n(0)}{w_L}\right)^2\frac{\delta_T}{\lambda_n}
 \end{equation}
@@ -110,18 +167,17 @@ The corresponding magnification factor at detection is thus
 \end{equation}
 thus the laser intensity at detection is reduced by a factor $\gamma_n(z)^{-2}$.
 
-Note that at large distances,
+At large distances,
 \begin{equation}
-	\gamma_n \approx \frac{z\tan(w_n(0)/(f_\mathrm{p}\cos\theta}{w_n(0))},
+	\gamma_n \approx \frac{z\tan(w_n(0)/(f_\mathrm{p}\cos\theta)}{w_n(0))}
 \end{equation}
-Taylor expanding the tangent, one sees that the magnification factor is only weakly dependent on the harmonic source size ($f_\mathrm{p}$ is independent of the source size), whereas the magnification is strongly dependent on the the laser spot size ($\sim w_\mathrm{L}^4$).
+Taking the Taylor expansion of the tangent, one sees that the magnification factor is only weakly dependent on the harmonic source size ($f_\mathrm{p}$ is independent of the source size), whereas the magnification is strongly dependent on the the laser spot size ($\sim w_\mathrm{L}^4$).
 
-
-At the new focal point, $z = z_\mathrm{f}$, the demagnification factor is \cite{vincentiOpticalPropertiesRelativistic2014}
+At the new \ac{RPM} focal point, $z = z_\mathrm{f}$, the demagnification factor is \cite{vincentiOpticalPropertiesRelativistic2014}
 \begin{equation}
 	\gamma_n(z_\mathrm{f}) = \frac{1}{\sqrt{1+\Psi_n^2}},
 \end{equation}
-this determines the new peak intensity accessible using this technique.
+this determines the new peak intensity accessible via hole boring.
 
 
 %TODO mention intrinsic phase and explain neglections.
